Implement key revocation lifecycle